--- a/bp/index.html
+++ b/bp/index.html
@@ -23,6 +23,7 @@
 
   <!-- TODO: voeg hier je eigen hoofdstukken toe -->
   <section data-include-format="markdown" data-include="best-practices.md" class="informative"></section>
+  <section data-include-format="markdown" data-include="mapping-skos.md" class="informative"></section>
   <section data-include-format="markdown" data-include="uitbreidingen.md" class="informative"></section>
   <!--<section data-include-format="markdown" data-include="mermaid.md"></section>-->
 
