Revert "remove H5/H6 includes"
This reverts commit 1f4f750269c0e5dac7ee8b78043e8e7d9fce18b4.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
   <section id='H2' data-include-format="markdown" data-include="respec/H2-kenmerken-van-begrippen.md"></section>
   <section id='H3' data-include-format="markdown" data-include="respec/H3-begrippenkader.md" class="informative"></section>
   <section id='H4' data-include-format="markdown" data-include="respec/H4-taalbinding.md"></section>
+  <section id='H5' data-include-format="markdown" data-include="respec/H5-best-practices.md" class="informative"></section>
+  <section id='H6' data-include-format="markdown" data-include="respec/H6-uitbreidingen.md" class="informative"></section>
   <section id='conformance'>
     <!-- This section is filled automatically by ReSpec. -->
   </section>
