--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script src="https://cdn.jsdelivr.net/gh/digitalbazaar/respec-mermaid@1.0.1/dist/main.js" class="remove notoc"></script>
   <script src="https://tools.geostandaarden.nl/respec/config/geonovum-config.js" class="remove"></script>
   <!--script src="./respec/organisatie-config.js" class="remove notoc"></script-->
-  <script src="./respec/document_config.js" class="remove notoc"></script>
+  <script src="./document_config.js" class="remove notoc"></script>
   <script class="remove"> respecConfig = {...organisationConfig, ...documentConfig}</script>
   <script>document.title = respecConfig.title</script>
   <link rel="shortcut icon" type="image/x-icon" href="https://tools.geostandaarden.nl/respec/style/logos/Geonovum.ico">
